--- a/specific-tabs/Wadi-El-Natrun.html
+++ b/specific-tabs/Wadi-El-Natrun.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تمثال اسد دمنهور | جولة في متحف البحيرة</title>
+    <title>دير الأنبا بيشوي | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/lion.jpg" class="opera-image">
+                <img src="../imgs/Wadi-El-Natrun.JPG" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11">دير الأنبا بيشوي</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,18 +43,17 @@
                     <h2> معلومات</h2>
                     <p>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
+يعود إنشاء دير الأنبا بيشوي في بداياته الأولى كتجمع رهباني بقيادة الأنبا بيشوي إلى أواخر القرن الرابع الميلادي، وعاصر بناؤه القديس مقار الكبير. وكان آنذاك عبارة عن مجموعة قلالي (وهي مساكن الرهبان) وكنيسة في الوسط تحيط بالمغارة الصخرية التي عاش فيها الأنبا بيشوي وذلك دون بناء أسوار. وقد دُمرت هذه الكنيسة في القرن الخامس الميلادي بسبب غارة على الأديرة من الليبيين البدو عام 407؛ منذ 1618 سنوات. وعلى الرغم من إعادة بناءها؛ إلا أنها دُمرت مرة أخرى في الغارتين التاليتين عامي 434؛ منذ 1591 سنوات و444؛ منذ 1581 سنوات. ولقد تعرض أيضاً هذا الدير للتخريب أثناء غارة رابعة للبربر قرب نهاية القرن السادس الميلادي، على التجمعات الرهبانية بوادي النطرون، وكانت مبانيه الأساسية آنذاك هي الكنيسة والحصن. وقد أعيد بناؤهما في عهد البابا بنيامين الأول عام 645؛ منذ 1380 سنوات.
+
 <br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
+وفي عام 817 م، تخرب الدير مرة أخرى أثناء غارة البربر الخامسة، ولكن تم تعميره وإصلاحه في عهد البابا يعقوب الأول، وأكل تعميره البابا يوساب الأول وأعاد أجساد القديسين الأنبا بيشوي والأنبا بولا الطموهي إلى الدير، كما أعاد بناء الكنيسة والدير بصفة عامة. لذا؛ فإن المبنى الرئيسي لكنيسة الدير الرئيسية الحالية يرجع إلى عام 840 م.
 <br>
 
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
-<br>
+وفي عام 1069؛ منذ 956 سنوات، تعرض الدير لغزو البربر اللواتيين. وفي عام 1319 م، تم ترميم الدير في عهد البابا بنيامين الثاني، وقد دفن في الجهة القبلية بالكنيسة الكبرى بالدير. وقد زار الدير عدد من الرحالة والمؤرخين الذين كتبوا عنه، أمثال المقريزي في القرن الخامس عشر الميلادي، وقد قال عنه أنه: كبير جدًا، ولكن لا يوجد شيء على حالته.
 
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
 <br>
+وفي عهد البابا شنودة الثالث، قام بحركة تجديد واسعة للدير، فقد أمر بتجديد القلالي، وأعاد ترميم بئر الماء الذي غسل فيه البربر سيوفهم بعد أن قتلوا شيوخ شهيت التسعة والأربعون، كما أضاف للدير قرابة 300 فداناً من الصحراء المحيطة به لأجل استصلاحها، بالإضافة إلى القلاية البطريركية الخاصة به، وأمر كذلك بإدخال الكهرباء للدير. يُذكر أنه قد تم طبخ وإعداد زيت الميرون في الدير خمس مرات من سبعة في عهده، وذلك في أعوام 1981 و1987 و1990 و1995 و2008 في عهده، لتوزيعه على الكنائس القبطية في مصر وخارجها.
 
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
 
 
 
@@ -72,7 +71,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#lion" class="back-btn">
+                <a href="../index.html#Wadi-El-Natrun" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
