--- a/specific-tabs/abo-abdellah.html
+++ b/specific-tabs/abo-abdellah.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تمثال اسد دمنهور | جولة في متحف البحيرة</title>
+    <title>مسجد ابو عبدالله المغربي | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/lion.jpg" class="opera-image">
+                <img src="../imgs/abo-abdellah.jpeg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11">مسجد ابو عبدالله المغربي</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,18 +43,24 @@
                     <h2> معلومات</h2>
                     <p>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
+يقع مسجد أبو عبدالله المغربي في مدينة دمنهور، وتحديدًا في شارع أبو عبدالله بمنطقة تاموس. ويُعرف المسجد بأنه واحة للذكر والقرآن في محافظة البحيرة، حيث تُعقد فيه مقارئ القرآن الكريم وحلقات الذكر. 
 <br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
+فعاليات قرآنية
 <br>
-
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
-<br>
-
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
+مقارئ القرآن: يُنظم المسجد فعاليات مميزة لمقارئ القرآن الكريم، حيث يتجمع المصلون لقراءة القرآن وتدبر آياته.
 <br>
 
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
+حلقات الذكر النبوي: تقام حلقات للذكر النبوي الشريف، التي تجمع أعدادًا كبيرة من المصلين. 
+<br>
+
+موقع المسجد
+<br>
+
+العنوان: يقع في شارع أبو عبدالله بمنطقة تاموس في مدينة دمنهور.
+<br>
+
+مشاهدات: رصدت عدسات الكاميرا فعاليات المقارئ التي تقام في المسجد. 
+
 
 
 
@@ -72,7 +78,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#lion" class="back-btn">
+                <a href="../index.html#abo-abdellah" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
