--- a/specific-tabs/canob.html
+++ b/specific-tabs/canob.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تمثال اسد دمنهور | جولة في متحف البحيرة</title>
+    <title>لوحة كوم الحصن "مرسوم كانوب" | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/lion.jpg" class="opera-image">
+                <img src="../imgs/canob.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11">لوحة كوم الحصن "مرسوم كانوب"</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,19 +43,9 @@
                     <h2> معلومات</h2>
                     <p>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
-<br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
-<br>
+مرسوم كانوپ (Decree of Canopus)، هو نقش ثلاثي اللغة بثلاثة خطوط، يعود تاريخه إلى الفترة الپطلمية في مصر القديمة. وقد كُتب بثلاثة أنظمة كتابة: الهيروغليفية المصرية، والديموطية، واليونانية الكوينية، على العديد من الأحجار التذكارية أو النصب التذكارية المصرية القديمة. النقش هو سجل لمجمعاً كبيراً للكهنة عقد في كانوپ، في 7 أپلايوس (مقدوني) = 17 تيبى (مصري) السنة التاسعة من حكم پطليموس الثالث = الخميس 7 مارس 238 قبل الميلاد (التقويم اليوليوسي المبكر). وقد كرّم مرسومهم الفرعون پطليموس الثالث إورگيتس؛ وزوجته الملكة برنيكه وابنته الأميرة برنيكه.
 
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
 <br>
-
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
-<br>
-
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
-
 
 
                     </p>
@@ -72,7 +62,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#lion" class="back-btn">
+                <a href="../index.html#canob" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
