--- a/specific-tabs/defsho.html
+++ b/specific-tabs/defsho.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تمثال اسد دمنهور | جولة في متحف البحيرة</title>
+    <title>كوم دفشو | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/lion.jpg" class="opera-image">
+                <img src="../imgs/defsho.png" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11">كوم دفشو</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,18 +43,16 @@
                     <h2> معلومات</h2>
                     <p>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
-<br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
-<br>
+توجد في كفر الدوار والمنطقة المحيطة بها العديد من المواقع الأثرية والتاريخية، والتي يعود أغلبها إلى العصرين اليوناني والروماني، بالإضافة إلى أهميتها التاريخية الحديثة كمسرح لواحدة من أهم المعارك في التاريخ المصري الحديث. 
+أهم الآثار والمواقع في كفر الدوار:
+تل آثار كوم دفشو: يعد هذا التل من أبرز المواقع الأثرية في مركز كفر الدوار. كشفت الحفائر فيه عن مجموعة من التوابيت الحجرية والفخارية، وبعض الأواني الفخارية التي تعود للعصرين اليوناني والروماني.
+كوم الحمام: منطقة أثرية أخرى تقع في مركز كفر الدوار.
+المقابر القديمة المحيطة: تنتشر في محيط كفر الدوار عدة تلال ومناطق أثرية تحتوي على بقايا فخارية ومقتنيات من العصر البطلمي، ومنها: كوم إيشو، كوم الفرج، سيدي غازي، كوم الطرغاية، وتل القنايس.
+مواقع مسح كفر الدوار الأثري: قامت جمعية استكشاف مصر (EES) بمسح لمواقع أثرية مختارة بالقرب من المدينة، مثل كوم الغسولي، عبده باشا، وكوم المجير، والتي تفتقر المعلومات عنها للتوفر على نطاق واسع.
+نصب تذكاري لمعركة كفر الدوار: يحمل هذا النصب أهمية تاريخية حديثة، إذ يخلد ذكرى معركة كفر الدوار الشهيرة التي وقعت عام 1882 بين الجيش المصري بقيادة أحمد عرابي والقوات البريطانية، وانتهت بانتصار القوات المصرية في هذه المعركة.
+متحف كفر الدوار: يعرض هذا المتحف مقتنيات أثرية وحرف تقليدية وصوراً توثق تاريخ المدينة وتراثها الثقافي. 
+تجدر الإشارة إلى أن بعض هذه المواقع قد تعرضت لتعديات عبر الزمن، مما يؤكد على أهمية الحفاظ على هذا التراث. 
 
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
-<br>
-
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
-<br>
-
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
 
 
 
@@ -72,7 +70,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#lion" class="back-btn">
+                <a href="../index.html#defsho" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
