--- a/specific-tabs/malaha.html
+++ b/specific-tabs/malaha.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تمثال اسد دمنهور | جولة في متحف البحيرة</title>
+    <title>ملاحة الرايزونية | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/lion.jpg" class="opera-image">
+                <img src="../imgs/malaha.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11">ملاحة الرايزونية</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,19 +43,22 @@
                     <h2> معلومات</h2>
                     <p>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
-<br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
-<br>
-
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
-<br>
-
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
-<br>
-
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
-
+ملاحة الرايزونية هي واحدة من سبع بحيرات مالحة رئيسية (ملاحات) تقع في منطقة وادي النطرون بمحافظة البحيرة في مصر، وتعرف المنطقة تاريخياً باسم "بحيرة السماء". 
+إليك المزيد من المعلومات عنها:
+الخصائص الرئيسية
+الموقع: تقع في الجزء الشمالي الشرقي من الصحراء الغربية في مصر.
+نوع المياه: هي بحيرة مالحة للغاية، مثل باقي ملاحات الوادي، وتتميز بتركيز عالٍ من الأملاح.
+التكوين الملحي: تحتوي مياهها على معدن النطرون الطبيعي، وهو مزيج من كربونات وبيكربونات الصوديوم، بالإضافة إلى كلوريد وكبريتات الصوديوم. 
+الأهمية التاريخية
+التحنيط الفرعوني: كانت أملاح النطرون المستخرجة من هذه الملاحات هي المكون الأساسي الذي استخدمه المصريون القدماء في عمليات تحنيط المومياوات، حيث كان هذا الملح يساعد على تجفيف الجثث بشكل فعال وحفظها.
+التجارة القديمة: كانت ترسبات النطرون في هذه المنطقة ذات قيمة تجارية عالية في العصور القديمة، وتم تصديرها إلى مناطق أخرى. 
+الأهمية الحديثة والاستثمار
+الثروة القومية: تُعتبر ملاحات وادي النطرون، بما فيها الرايزونية، ثروة قومية لمصر.
+الاستثمار والسياحة العلاجية: تسعى الحكومة المصرية والمستثمرون إلى استغلال هذه الملاحات في مجالات متعددة، أبرزها:
+السياحة العلاجية: المنطقة غنية بالرمال الفريدة والمياه المالحة التي تُستخدم في العلاج الطبيعي والاستشفاء.
+الاستخراج الصناعي: لا تزال الأملاح تُستخرج منها لأغراض صناعية وتجارية. 
+الحياة البرية
+منطقة بيئية: تقع المنطقة ضمن بيئة صحراوية جافة، وتعد موطنًا محتملاً لبعض الحيوانات البرية مثل الغزلان المصرية (وهي أنواع محمية يمنع صيدها) التي تتكيف مع هذه البيئات. 
 
 
                     </p>
@@ -72,7 +75,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#lion" class="back-btn">
+                <a href="../index.html#malaha" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
