--- a/specific-tabs/qanater.html
+++ b/specific-tabs/qanater.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تمثال اسد دمنهور | جولة في متحف البحيرة</title>
+    <title>قناطر إدفينا | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/lion.jpg" class="opera-image">
+                <img src="../imgs/qanater.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11">قناطر إدفينا</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,18 +43,12 @@
                     <h2> معلومات</h2>
                     <p>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
-<br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
-<br>
+قناطر إدفينا، هي الممر الرئيسي الذي يربط بين محافظات كفر الشيخ والبحيرة والإسكندرية، وتقع عند نهاية قرية إدفينا، مركز رشيد، محافظة البحيرة. وهي القناطر الوحيدة التي تحجز مياه نهر النيل فرع رشيد عن مياه البحر الأبيض المتوسط
 
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
 <br>
-
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
+تم البدء في انشاء القناطر عام 1949 وافتتحها مصطفى النحاس باشا رئيس وزراء مصر عام 1951.
 <br>
-
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
+وتنتشر فيها خمسة حدائق بالبر الأيسر مساحتها 25 فدان، والبر الأيمن به حديقتان مقامة على عشرة أفدنة وبهما مشتل لانتاج الزهور والنباتات النادرة ومسطحات خضراء وأحواض وأشكال هندسية ونافورات وحديقتان لمساحة 100 فدان منزرعة بالموالح والفاكهة وتقع القناطر على بعد 20 كم جنوبى مدينة رشيد وهى تمثل موقعاً ومزاراً سياحياً وعلى مقربة منها تقع مدينة مطوبس وقرية أبيانة التى ولد بها الزعيم التاريخى الراحل سعد زغلول.
 
 
 
@@ -72,7 +66,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#lion" class="back-btn">
+                <a href="../index.html#qanater" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
