--- a/specific-tabs/sidi-omar.html
+++ b/specific-tabs/sidi-omar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تمثال اسد دمنهور | جولة في متحف البحيرة</title>
+    <title>مسجد سيدي عمر | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/lion.jpg" class="opera-image">
+                <img src="../imgs/sidi-omar.jpg" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11">مسجد سيدي عمر</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,19 +43,18 @@
                     <h2> معلومات</h2>
                     <p>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
+يرجع نسب العارف بالله سيدى عمر الإفلاقى إلى الإمام الحسين رضى الله عنه حفيد الرسول صلى الله عليه وسلم، ومن ذرية سيدى موسى أبى العمران الشقيق الأصغر لسيدى إبراهيم القرشى الدسوقى، الذى يمتد نسبه لسيدنا على بن أبى طالب رضى الله عنه وأرضاه.
 <br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
-<br>
-
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
+يعد مسجد سيدى الإفلاقى بوسط مدينة دمنهور، أحد معالم المدينة، وذلك لقيمته المعمارية وتاريخه العريق الذى يصل إلى أكثر من 200 عاما والذى دفن فى رحابه الشيخ عمر الإفلاقى. وهو من أكثر المساجد شعبية بمدينة دمنهور ويتوافد عليه المئات من الأهالى خاصة فى شهر رمضان الكريم، ويعتبر ضريحه قبلة لكافة الطرق الصوفية خاصة الطريقة العزمية التى تعقد به حضرات الذكر النبوية والجلسات الدينية منذ عدة سنوات.
 <br>
 
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
+مر مسجد سيدى عمر الافلاقى بالعديد من أعمال الترميم كان آخرها منذ حوالى 5 سنوات، والتى تضمنت تطويرا شاملا فى أركان المسجد.
 <br>
 
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
+وقال الشيخ الحسينى المعاملى إمام مسجد سيدى عمر الإفلاقى، أن هذا المسجد معطر بروح صاحبة أحد الاشراف الذى يمتد نسبة إلى الرسول صلى الله عليه وسلم، مضيفا أن النفحات الروحانية لشهر رمضان المبارك تتجلى فى هذا المسجد العامر، والذى يعكس عبق أهل البيت والذى يتوافد عليه المئات المواطنين لأداء صلاة التراويح والتهجد فى أواخر الشهر الكريم.
+<br>
 
+وأوضح الشيخ الحسينى إمام مسجد الإفلاقى، أن هناك خطة متكاملة من قبل وزارة الأوقاف خلال شهر رمضان الكريم فى رحاب هذا المسجد العامر، تتضمن مقارئ القرآن الكريم وحلقات ذكر النبى، إضافة إلى إقامة الندوات الدينية وحلقات تحفيظ القرآن الكريم.
 
 
                     </p>
@@ -72,7 +71,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#lion" class="back-btn">
+                <a href="../index.html#sidi-omar" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
