--- a/specific-tabs/rooms.html
+++ b/specific-tabs/rooms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تمثال اسد دمنهور | جولة في متحف البحيرة</title>
+    <title>كوم الغرف | جولة في متحف البحيرة</title>
     
     
     <link rel="stylesheet" href="specific.css">
@@ -23,11 +23,11 @@
         <main class="content">
             <!-- إطار الصورة الكبير -->
             <div class="opera-frame">
-                <img src="../imgs/lion.jpg" class="opera-image">
+                <img src="../imgs/rooms.png" class="opera-image">
             </div>
 
             <!-- المعلومات التفصيلية -->
-            <h1 class="h11">تمثال اسد دمنهور</h1>
+            <h1 class="h11">كوم الغرف</h1>
             <section class="details">
                 <!-- <div class="detail-card">
                     <h2><i class="fas fa-history"></i> التاريخ والنشأة</h2>
@@ -43,18 +43,33 @@
                     <h2> معلومات</h2>
                     <p>
 
-تمثال "أسد دمنهور" هو تمثال أثري عُثر عليه في مدينة دمنهور وتم نقله من موقعه الأصلي أثناء تجديدات محطة السكة الحديد. حاليًا، التمثال محفوظ في مخازن هيئة الآثار في محافظة كفر الشيخ، وقد تم نقله خوفًا على سلامته. يُعتقد أنه وُجد أثناء شق خط السكة الحديد أو في المناطق المجاورة، وقد يرجع تاريخه إلى فترة انتشار عبادة الآلهة الممثلة بالأسد في مصر القديمة. 
+يُعد تل كوم الغرف واحدًا من أهم التلال الأثرية في محافظة البحيرة، وتشير الاكتشافات إلى أنه كان موقعًا حضاريًا هامًا عبر عدة عصور تاريخية. 
 <br>
-موقعه الحالي: يُحفظ في مخازن هيئة الآثار في كفر الشيخ.
+الموقع والمساحة
 <br>
+يقع التل في مركز المحمودية بمحافظة البحيرة، ويغطي مساحة كبيرة تبلغ حوالي 104 فدانًا. 
+<br>
+الأهمية التاريخية والحضارية
+<br>
+عاصمة محتملة: من المرجح أن تل كوم الغرف كان في الماضي عاصمة لمقاطعة تُدعى "ميتيليت" (Metelete)، والتي كانت من أهم المواقع الحضارية في منطقة الدلتا.
+<br>
+تعدد العصور: كشفت الحفائر عن وجود آثار تعود إلى العصور الفرعونية والرومانية والقبطية، مما يدل على استمرارية الأهمية السكنية والحضارية للموقع عبر فترات زمنية طويلة.
+<br>
+مجتمع سكني كبير: تم الكشف عن بقايا مجتمع سكني واسع، يتكون من مساكن مبنية بالطوب اللبن، بالإضافة إلى بعض البوابات التي كانت جزءًا من مدينة بيزنطية. 
+<br>
+الاكتشافات الأثرية
+<br>
+أثناء عمليات المسح الأثري والتنقيب، تم العثور على:
+<br>
+مساكن مطمورة وحمامات معقودة.
+<br>
+ظروف (أوانٍ فخارية أو ما شابه) تحتوي بداخلها على قطع نحاسية قديمة.
+<br>
+تعد المنطقة جزءاً من خطة الدولة لتطوير وحماية التلال الأثرية، وتخضع لإشراف هيئة الآثار. 
+<br>
+تُظهر هذه المعلومات أن "كوم الغرف" ليس مجرد تل عادي، بل هو كنز أثري يختبئ تحت طبقات الأرض، ويحكي تاريخ منطقة الدلتا عبر آلاف السنين.
 
-سبب النقل: تم نقله للحفاظ على سلامته بسبب أعمال التطوير في محطة السكة الحديد.
-<br>
 
-مكان العثور عليه: المدينة أو المناطق المحيطة بها، ربما أثناء شق خط السكة الحديد.
-<br>
-
-أهميته التاريخية: يُعتقد أنه يرتبط بانتشار عبادة الآلهة التي تمثل بالأسد في مصر القديمة. 
 
 
 
@@ -72,7 +87,7 @@
 
             <!-- زر الرجوع -->
             <div class="back-section">
-                <a href="../index.html#lion" class="back-btn">
+                <a href="../index.html#rooms" class="back-btn">
                     <i class="fas fa-arrow-right"></i> العودة إلى الجولة الرئيسية
                 </a>
             </div>
